force-app/main/default/objects/Customer__c/fields/Maximum_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Transaction__c</fullName>
    <label>Maximum Transaction</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Transaction__c.Customer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>