force-app/main/default/objects/Customer__c/fields/Minimum_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Transaction__c</fullName>
    <label>Minimum Transaction</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Transaction__c.Customer__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>