force-app/main/default/objects/Customer__c/fields/Total_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction__c</fullName>
    <label>Total Transaction</label>
    <summaryForeignKey>Transaction__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>